--- a/pets/templates/random.html
+++ b/pets/templates/random.html
@@ -16,11 +16,16 @@ h1, h2 {
 
 {% block body %}
 <div class="container">
+  {% if pet %}
   <h1>Hi! I'm {{ pet.name | title }}!</h1>
   <p>I am a {{ pet.gender | lower }} {{ pet.color | lower }} {{ pet.breed | lower }}.<p>
   <p>You can adopt me at {{ pet.location }}!</p>
   <a href="{{ pet.detail_url }}"><img src="{{ pet.image_url }}"></a>
   <p><a href="{{ pet.detail_url }}">Click here to find out more!</a></p>
   <p><a href="{% url 'single_pet' pet.id %}">permalink</a></p>
+  {% else %}
+  <p>Sorry, no pets can be shown at the moment!</p>
+  {% endif %}
+
 </div>
 {% endblock %}
