--- a/pets/templates/list.html
+++ b/pets/templates/list.html
@@ -50,5 +50,14 @@ table th, table td {
   {% else %}
   <p>Sorry, no pets can be shown at the moment!</p>
   {% endif %}
+
+  <h3 style="margin-top:30px;font-weight:normal">Adoptable Pets in Denver</h3>
+  <ul class="inline">
+    <li><a href="{% url 'random_pet' %}">Random Pet</a></li>
+    <li><a href="{% url 'random_pet' %}?type=cat">Random Cat</a></li>
+    <li><a href="{% url 'random_pet' %}?type=dog">Random Dog</a></li>
+    <li><a href="{% url 'all_pets' %}">All Pets</a></li>
+  </ul>
+
 </div>
 {% endblock %}
